# aws-sdk-sts-caching-provider

./: .gitignore  Cargo.toml  NOTICE  README.md
src/: lib.rs
