[package]
name = "aws-sdk-sts-caching-provider"
version = "0.2.0-1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "0.2.0"
aws-types = "0.2.0"
aws-sdk-sts = "0.2.0"
tokio = { version = "~1", features = ["parking_lot", "sync"] }
tracing = "0.1"
tracing-futures = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "local-time"] }
